--- a/kanji/templates/chart2.html
+++ b/kanji/templates/chart2.html
@@ -16,6 +16,7 @@ html, body, #container {
 </style>
 </head>
 <body>
+  <h3>{{ location }}</h3>
   <div id="container_0" style="width:900px;height:200px"></div>
   <div id="container_1" style="width:900px;height:200px"></div>
   <script>
