--- a/kanji/templates/chart4.html
+++ b/kanji/templates/chart4.html
@@ -127,7 +127,7 @@ anychart.onDocumentReady(function () {
     }
     
     var pingSet = anychart.data.set(ping);
-    var pingseriesData = pingSet.mapAs({'x': 0, 'value': n+1});
+    var pingseriesData = pingSet.mapAs({'x': 0, 'value': 1});
       // create line chart
     var pingchart = anychart.line();
 
