--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -154,7 +154,7 @@ anychart.onDocumentReady(function () {
     //pingchartSeries.name('Ping');
     pingchartSeries.hovered().markers().enabled(true).type('circle').size(4);
     pingchartSeries.tooltip().position('right').anchor('left-center').offsetX(5).offsetY(5);
-    pingchartSeries.stroke('10 green');
+    pingchartSeries.stroke('green');
 
     pingchart.container('ping');      
     pingchart.draw();    
