--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -145,6 +145,8 @@ anychart.onDocumentReady(function () {
 
     // set chart title text settings
     pingchart.title('Ping');
+    pingchart.yScale().minimum(0);
+    pingchart.yScale().maximum(100);
 
     // set yAxis title
     //pingchart.yAxis().title(yaxis_labels[n]);
