--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -58,6 +58,12 @@ html, body, #container {
         <div class="column" id="ping_" style="width:900px;height:100px"></div>
     </div>
 </div>
+<script type="text/javascript">
+    window.setTimeout("reloadpage();", 30000);    
+    function reloadpage() {
+      location.reload(forceGet)
+    }
+</script>
 <script>
 anychart.onDocumentReady(function () {
     // create data set on our data
