--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -61,7 +61,7 @@ html, body, #container {
 <script type="text/javascript">
     window.setTimeout("reloadpage();", 30000);    
     function reloadpage() {
-      location.reload(forceGet)
+      location.reload(true)
     }
 </script>
 <script>
