--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -109,7 +109,7 @@ anychart.onDocumentReady(function () {
       // create line chart
       chart[n] = anychart.line();
       if n!=0:
-        chart[n].xAxis().labels().enabled(false);
+        chart[n].xAxis().labels().enabled(false)
       // turn on chart animation
       chart[n].animation(true);
       // set chart padding
