--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -110,6 +110,7 @@ anychart.onDocumentReady(function () {
       chart[n] = anychart.line();
       if (n!=0) {
          chart[n].xAxis().labels().enabled(false);
+         chart[n].yAxis().ticks().enabled(false);
       }
       // turn on chart animation
       chart[n].animation(true);
