--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -106,12 +106,14 @@ anychart.onDocumentReady(function () {
     for (n=0; n<series.length; n++) {       
 
       seriesData[n] = dataSet.mapAs({'x': 0, 'value': n+1});
+      
       // create line chart
       chart[n] = anychart.line();
       if (n!=0) {
-         chart[n].xAxis().labels().enabled(false);
-         chart[n].yAxis().ticks().enabled(false);
+         chart[n].xAxis().labels().enabled(false);         
       }
+      chart[n].xAxis().ticks().enabled(false);
+      chart[n].yAxis().ticks().enabled(false);
       // turn on chart animation
       chart[n].animation(true);
       // set chart padding
