--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -176,7 +176,7 @@ anychart.onDocumentReady(function () {
     // set two months minor ticks interval
     var dateMinorTicks2 = dateScale2.minorTicks();
     //years interval, months interval, days interval, hours interval, minutes interval, seconds interval.
-    dateMinorTicks2.interval(0, 0, 0, .25);
+    dateMinorTicks2.interval(0, 0, 0, 1);
     // set DateTime Scale as y scale of the chart
     pingchart.xScale(dateScale2);
 
