--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -124,7 +124,7 @@ anychart.onDocumentReady(function () {
       var dateMinorTicks = dateScale.minorTicks();
       //years interval, months interval, days interval, hours interval, minutes interval, seconds interval.
       dateMinorTicks.interval(0, 0, 0, 1);
-      // set DateTime Scale as y scale of the chart
+      // set DateTime Scale as x scale of the chart
       chart[n].xScale(dateScale);
 
       //
@@ -178,7 +178,7 @@ anychart.onDocumentReady(function () {
     //years interval, months interval, days interval, hours interval, minutes interval, seconds interval.
     dateMinorTicks2.interval(0, 0, 0, 1);
     // set DateTime Scale as y scale of the chart
-    pingchart.xScale(dateScale2);
+    //pingchart.xScale(dateScale2);
 
     // set yAxis title
     //pingchart.yAxis().title(yaxis_labels[n]);
