--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -178,7 +178,7 @@ anychart.onDocumentReady(function () {
     //years interval, months interval, days interval, hours interval, minutes interval, seconds interval.
     dateMinorTicks2.interval(0, 0, 0, 1);
     // set DateTime Scale as y scale of the chart
-    //pingchart.xScale(dateScale2);
+    pingchart.xScale(dateScale2);
 
     // set yAxis title
     //pingchart.yAxis().title(yaxis_labels[n]);
