--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -119,11 +119,11 @@ anychart.onDocumentReady(function () {
       var dateScale = anychart.scales.dateTime();
       // set one year ticks interval
       var dateTicks = dateScale.ticks();
-      dateTicks.interval(0, 0, 0, .5);
+      dateTicks.interval(0, 0, 0, 1);
       // set two months minor ticks interval
       var dateMinorTicks = dateScale.minorTicks();
       //years interval, months interval, days interval, hours interval, minutes interval, seconds interval.
-      dateMinorTicks.interval(0, 0, 0, .25);
+      dateMinorTicks.interval(0, 0, 0, 0, 30);
       // set DateTime Scale as x scale of the chart
       chart[n].xScale(dateScale);
 
