--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -119,10 +119,10 @@ anychart.onDocumentReady(function () {
       var dateScale = anychart.scales.dateTime();
       // set one year ticks interval
       var dateTicks = dateScale.ticks();
-      dateTicks.interval(0, 0, 0, 1);
+      dateTicks.interval(0, 0, 0, 0, 60);
       // set two months minor ticks interval
       var dateMinorTicks = dateScale.minorTicks();
-      //years interval, months interval, days interval, hours interval, minutes interval, seconds interval.
+      //years, months, days, hours, minutes, seconds.
       dateMinorTicks.interval(0, 0, 0, 0, 30);
       // set DateTime Scale as x scale of the chart
       chart[n].xScale(dateScale);
