--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -112,7 +112,7 @@ anychart.onDocumentReady(function () {
       if (n!=0) {
          chart[n].xAxis().labels().enabled(false);         
       }
-      chart[n].xAxis().ticks().enabled(false);
+      chart[n].xAxis().ticks().enabled(true);
       chart[n].yAxis().ticks().enabled(false);
       //
       //work on the time axis
