--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -130,6 +130,7 @@ anychart.onDocumentReady(function () {
       chart[n].crosshair().enabled(true).yLabel(false).yStroke(null);
       // set tooltip mode to point
       chart[n].tooltip().positionMode('point');
+      chart[n].titleFormat("time: {%x}");
       // set chart title text settings
       chart[n].title(series[n]);
       // set yAxis title
