--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -131,7 +131,7 @@ anychart.onDocumentReady(function () {
       // set tooltip mode to point
       chart[n].tooltip().positionMode('point');
       //chart[n].tooltip().titleFormat("time: {%x}");
-      chart[n].tooltip().titleFormat("time: {datetime.utcfromtimestamp(%x).strftime('%Y-%m-%d %H:%M:%S')}");
+      chart[n].tooltip().titleFormat("time: datetime.utcfromtimestamp({%x}).strftime('%Y-%m-%d %H:%M:%S')");
       //humantime = datetime.utcfromtimestamp(%x).strftime('%Y-%m-%d %H:%M:%S')
       // set chart title text settings
       chart[n].title(series[n]);
