--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -130,12 +130,12 @@ anychart.onDocumentReady(function () {
       chart[n].crosshair().enabled(true).yLabel(false).yStroke(null);
       // set tooltip mode to point
       chart[n].tooltip().positionMode('point');
-      //chart[n].tooltip().titleFormat("time: {%x}");
+      chart[n].tooltip().titleFormat("time: {%x}{dateTimeFormat:HH:mm:ss}");
       // set the tooltip content
-      chart[n].tooltip().format(function(e){
-        var xtime = (this.x)/1000;
-        return datetime.utcfromtimestamp(xtime).strftime('%Y-%m-%d %H:%M:%S');
-      });
+      //chart[n].tooltip().format(function(e){
+      //  var xtime = (this.x)/1000;
+      //  return datetime.utcfromtimestamp(xtime).strftime('%Y-%m-%d %H:%M:%S');
+      //});
       // set chart title text settings
       chart[n].title(series[n]);
       // set yAxis title
