--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -130,7 +130,7 @@ anychart.onDocumentReady(function () {
       chart[n].crosshair().enabled(true).yLabel(false).yStroke(null);
       // set tooltip mode to point
       chart[n].tooltip().positionMode('point');
-      chart[n].tooltip().titleFormat("time: {%x}{dateTimeFormat:HH:mm:ss}");
+      chart[n].tooltip().titleFormat("time: {%x %%zz}{dateTimeFormat:HH:mm:ss}");
       // set the tooltip content
       //chart[n].tooltip().format(function(e){
       //  var xtime = (this.x)/1000;
