--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -106,7 +106,7 @@ anychart.onDocumentReady(function () {
       seriesData[n] = dataSet.mapAs({'x': 0, 'value': n+1});
       // create line chart
       chart[n] = anychart.line();
-      chart[n].format.outputTimezone(-5);
+      //chart[n].format.outputTimezone(-5);
       if (n!=0) {
          chart[n].xAxis().labels().enabled(false);         
       }
