--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -122,7 +122,7 @@ anychart.onDocumentReady(function () {
       //years, months, days, hours, minutes, seconds.
       dateMinorTicks.interval(0, 0, 0, 0, 60);
       // set DateTime Scale as x scale of the chart
-      chart[n].xScale(dateScale);      
+      //chart[n].xScale(dateScale);      
       // turn on chart animation
       chart[n].animation(true);
       // set chart padding
