--- a/kanji/templates/chart5.html
+++ b/kanji/templates/chart5.html
@@ -122,6 +122,9 @@ anychart.onDocumentReady(function () {
       //years, months, days, hours, minutes, seconds.
       dateMinorTicks.interval(0, 0, 0, 0, 60);
       // set DateTime Scale as x scale of the chart
+      var offset = new Date().getTimezoneOffset();
+      anychart.format.outputTimezone(offset);
+      
       chart[n].xScale(dateScale);      
       // turn on chart animation
       chart[n].animation(true);
