--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -72,7 +72,7 @@ anychart.onDocumentReady(function () {
     // create data set on our data
     //window.alert("Hello");
     data = {{ data | safe }};
-    ping = {{ ping | safe }};
+    //ping = {{ ping | safe }};
     series = {{ series | safe }};
     colors = {{ colors | safe }};
     ranges = {{ ranges | safe }};
