--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -78,6 +78,7 @@ anychart.onDocumentReady(function () {
     ranges = {{ ranges | safe }};
     fills = {{ fills | safe  }};
     units = {{ units | safe }};
+    chartdefs = {{ chartdefs | safe}};
     yaxis_labels = {{ yaxis_labels | safe }};
      
     //debugger;
@@ -93,7 +94,7 @@ anychart.onDocumentReady(function () {
       gauges[n].axis().labels().padding(5).fontSize(1).position('outside').format('{%Value}');
       point = data[data.length-1][n+1]
       gauges[n].data([point]);
-      gauges[n].axis().scale().minimum(ranges[n][0]).maximum(ranges[n][5]).ticks({interval: 30}).minorTicks({interval: 15});
+      gauges[n].axis().scale().minimum(chartdefs.charts[n]['ranges'][0]).maximum(ranges[n][5]).ticks({interval: 30}).minorTicks({interval: 15});
       gauges[n].axis().fill('#545f69').width(1).ticks({type: 'line', fill: 'white', length: 2});
       gauges[n].needle().stroke('2 #07090d').startRadius('35%').endRadius('90%').startWidth('5.5%').endWidth('0.1%').middleWidth('2.5%');
       gauges[n].range(0, {from: ranges[n][0], to: ranges[n][1], position: 'inside', fill: fills[n][0], startSize: 15, endSize: 15, radius: 100 });
@@ -126,8 +127,7 @@ anychart.onDocumentReady(function () {
       dateMinorTicks.interval(0, 0, 0, 0, 60);
       // set DateTime Scale as x scale of the chart
       var offset = new Date().getTimezoneOffset();
-      anychart.format.outputTimezone(600);
-      
+      anychart.format.outputTimezone(600);      
       chart[n].xScale(dateScale);      
       // turn on chart animation
       chart[n].animation(true);
@@ -138,11 +138,6 @@ anychart.onDocumentReady(function () {
       // set tooltip mode to point
       chart[n].tooltip().positionMode('point');
       chart[n].tooltip().titleFormat("time: {%x}{dateTimeFormat:HH:mm:ss}");
-      // set the tooltip content
-      //chart[n].tooltip().format(function(e){
-      //  var xtime = (this.x)/1000;
-      //  return datetime.utcfromtimestamp(xtime).strftime('%Y-%m-%d %H:%M:%S');
-      //});
       // set chart title text settings
       chart[n].title(series[n]);
       // set yAxis title
