--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -75,7 +75,7 @@ anychart.onDocumentReady(function () {
     //ping = {{ ping | safe }};
     series = {{ series | safe }};
     colors = {{ colors | safe }};
-    ranges = {{ ranges | safe }};
+    //ranges = {{ ranges | safe }};
     fills = {{ fills | safe  }};
     units = {{ units | safe }};
     chartdefs = {{ chartdefs | safe}};
