--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -73,7 +73,7 @@ anychart.onDocumentReady(function () {
     //window.alert("Hello");
     data = {{ data | safe }};
     //ping = {{ ping | safe }};
-    series = {{ series | safe }};
+    //series = {{ series | safe }};
     colors = {{ colors | safe }};
     //ranges = {{ ranges | safe }};
     fills = {{ fills | safe  }};
@@ -83,12 +83,12 @@ anychart.onDocumentReady(function () {
      
     //debugger;
     var dataSet = anychart.data.set(data);    
-    var seriesData = new Array(series.length);
-    var chart = new Array(series.length);
-    var chartSeries = new Array(seriesData.length)
+    var seriesData = new Array(len(chardefs.charts));
+    var chart = new Array(len(chardefs.charts));
+    var chartSeries = new Array(len(chardefs.charts))
     
     var gauges = new Array(seriesData.length)
-    for (n=0; n<series.length; n++) { 
+    for (n=0; n<len(chardefs.charts); n++) { 
       gauges[n] = anychart.gauges.circular();
       gauges[n].fill('#fff').stroke(null).padding(0).margin(5).startAngle(270).sweepAngle(180);
       gauges[n].axis().labels().padding(5).fontSize(1).position('outside').format('{%Value}');
@@ -106,7 +106,7 @@ anychart.onDocumentReady(function () {
       gauges[n].draw(); 
     } 
            
-    for (n=0; n<series.length; n++) { 
+    for (n=0; n<len(chardefs.charts); n++) { 
       seriesData[n] = dataSet.mapAs({'x': 0, 'value': n+1});
       // create line chart
       chart[n] = anychart.line();
@@ -139,16 +139,16 @@ anychart.onDocumentReady(function () {
       chart[n].tooltip().positionMode('point');
       chart[n].tooltip().titleFormat("time: {%x}{dateTimeFormat:HH:mm:ss}");
       // set chart title text settings
-      chart[n].title(series[n]);
+      chart[n].title(chartdefs.charts[n]['title']);
       // set yAxis title
-      chart[n].yAxis().title(yaxis_labels[n]);
+      chart[n].yAxis().title(chartdefs.charts[n]['ylabel']);
       chart[n].xAxis().labels().padding(5)
 
       chartSeries[n] = chart[n].line(seriesData[n]);
-      chartSeries[n].name(series[n]);
+      chartSeries[n].name(chartdefs.charts[n]['title']);
       chartSeries[n].hovered().markers().enabled(true).type('circle').size(4);
       chartSeries[n].tooltip().position('right').anchor('left-center').offsetX(5).offsetY(5);
-      chartSeries[n].stroke(colors[n]);
+      chartSeries[n].stroke(chartdefs.charts[n]['linecolor']);
 
       chart[n].container('container_' + (n+1).toString());      
       chart[n].draw(); 
