--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -74,7 +74,7 @@ anychart.onDocumentReady(function () {
     data = {{ data | safe }};
     //ping = {{ ping | safe }};
     series = {{ series | safe }};
-    colors = {{ colors | safe }};
+    //colors = {{ colors | safe }};
     //ranges = {{ ranges | safe }};
     fills = {{ fills | safe  }};
     units = {{ units | safe }};
@@ -148,7 +148,7 @@ anychart.onDocumentReady(function () {
       chartSeries[n].name(series[n]);
       chartSeries[n].hovered().markers().enabled(true).type('circle').size(4);
       chartSeries[n].tooltip().position('right').anchor('left-center').offsetX(5).offsetY(5);
-      chartSeries[n].stroke(colors[n]);
+      chartSeries[n].stroke(chartdefs.charts[n]['linecolor']);
 
       chart[n].container('container_' + (n+1).toString());      
       chart[n].draw(); 
