--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -76,7 +76,7 @@ anychart.onDocumentReady(function () {
     series = {{ series | safe }};
     //colors = {{ colors | safe }};
     //ranges = {{ ranges | safe }};
-    fills = {{ fills | safe  }};
+    //fills = {{ fills | safe  }};
     units = {{ units | safe }};
     chartdefs = {{ chartdefs | safe}};
     yaxis_labels = {{ yaxis_labels | safe }};
@@ -97,9 +97,9 @@ anychart.onDocumentReady(function () {
       gauges[n].axis().scale().minimum(chartdefs.charts[n]['ranges'][0]).maximum(chartdefs.charts[n]['ranges'][5]).ticks({interval: 30}).minorTicks({interval: 15});
       gauges[n].axis().fill('#545f69').width(1).ticks({type: 'line', fill: 'white', length: 2});
       gauges[n].needle().stroke('2 #07090d').startRadius('35%').endRadius('90%').startWidth('5.5%').endWidth('0.1%').middleWidth('2.5%');
-      gauges[n].range(0, {from: chartdefs.charts[n]['ranges'][0], to: chartdefs.charts[n]['ranges'][1], position: 'inside', fill: fills[n][0], startSize: 15, endSize: 15, radius: 100 });
-      gauges[n].range(1, { from: chartdefs.charts[n]['ranges'][2], to: chartdefs.charts[n]['ranges'][3], position: 'inside', fill: fills[n][1], startSize: 15, endSize: 15, radius: 100 });
-      gauges[n].range(2, { from: chartdefs.charts[n]['ranges'][4], to: chartdefs.charts[n]['ranges'][5], position: 'inside', fill: fills[n][2], startSize: 15, endSize: 15, radius: 100 });
+      gauges[n].range(0, {from: chartdefs.charts[n]['ranges'][0], to: chartdefs.charts[n]['ranges'][1], position: 'inside', fill: chartdefs.charts[n]['fills'][n][0], startSize: 15, endSize: 15, radius: 100 });
+      gauges[n].range(1, { from: chartdefs.charts[n]['ranges'][2], to: chartdefs.charts[n]['ranges'][3], position: 'inside', fill: chartdefs.charts[n]['fills'][1], startSize: 15, endSize: 15, radius: 100 });
+      gauges[n].range(2, { from: chartdefs.charts[n]['ranges'][4], to: chartdefs.charts[n]['ranges'][5], position: 'inside', fill: chartdefs.charts[n]['fills'][2], startSize: 15, endSize: 15, radius: 100 });
       gauges[n].container('speed_' + (n+1).toString());
       displayvalue = point + units[n]
       gauges[n].label(2).text(displayvalue).fontColor('#212121').fontSize(44).offsetY('18%').offsetX(20).anchor('center');
