--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -73,7 +73,7 @@ anychart.onDocumentReady(function () {
     //window.alert("Hello");
     data = {{ data | safe }};
     //ping = {{ ping | safe }};
-    //series = {{ series | safe }};
+    series = {{ series | safe }};
     //colors = {{ colors | safe }};
     //ranges = {{ ranges | safe }};
     //fills = {{ fills | safe  }};
