--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -83,7 +83,7 @@ anychart.onDocumentReady(function () {
      
     //debugger;
     var dataSet = anychart.data.set(data);    
-    var seriesData = new Array(series.length);
+    var seriesData = new Array(chartdefs['charts'].size());
     var chart = new Array(series.length);
     var chartSeries = new Array(seriesData.length)
     
