--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -80,7 +80,7 @@ anychart.onDocumentReady(function () {
     
     var gauges = new Array(seriesData.length)
     for (n=0; n<3; n++) { 
-      if chartdefs.charts[n]['gaugeshow']=="true":
+      if chartdefs.charts[n]['gaugeshow']=="true"{
         gauges[n] = anychart.gauges.circular();
         gauges[n].fill('#fff').stroke(null).padding(0).margin(5).startAngle(270).sweepAngle(180);
         gauges[n].axis().labels().padding(5).fontSize(1).position('outside').format('{%Value}');
@@ -96,6 +96,7 @@ anychart.onDocumentReady(function () {
         displayvalue = point + chartdefs.charts[n]['units']
         gauges[n].label(2).text(displayvalue).fontColor('#212121').fontSize(44).offsetY('18%').offsetX(20).anchor('center');
         gauges[n].draw(); 
+      }
     } 
            
     for (n=0; n<3; n++) { 
