--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -42,7 +42,7 @@ html, body, #container {
 </style>
 </head>
 <body>
-  <h3>{{ location }}</h3>
+  <h3>{{ location }} {{ timedelta }}</h3>
 <div class="container"> 
 
     <div class="row" style="width:900px;">
