--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -42,8 +42,11 @@ html, body, #container {
 </style>
 </head>
 <body>
-  <h3>{{ location }} {{ timedelta }}</h3>
-<div class="container"> 
+<div class="container">
+    <div class="row" style="width:900px;">
+        <div class="column" id="location" style="width:600px;height:200px">{{ location }}</div>
+        <div class="column" id="timediff" style="width:300px;height:200px">{{ timedelta }} seconds ago</div>
+    </div>
 
     <div class="row" style="width:900px;">
         <div class="column" id="container_1" style="width:600px;height:200px"></div>
